--- a/README.html
+++ b/README.html
@@ -638,7 +638,7 @@ sub {
   color: #a31515; }
 
 /* @end */
-#mkreplaced-toc{list-style-position:inside;padding:0;margin:0 0 0 1rem;list-style-type:none}#mkreplaced-toc li::before{content:''}#mkreplaced-toc li{font-size:1rem;line-height:1.25;font-weight:normal}#mkreplaced-toc li ul{font-size:1.3rem;font-weight:300;padding:.5rem 0;margin:0 0 0 1rem}#mkreplaced-toc li.missing{list-style-type:none !important}#mkreplaced-toc.max-1 ul,#mkreplaced-toc.max1 ul{display:none}#mkreplaced-toc.max-2 ul ul,#mkreplaced-toc.max2 ul ul{display:none}#mkreplaced-toc.max-3 ul ul ul,#mkreplaced-toc.max3 ul ul ul{display:none}#mkreplaced-toc.max-4 ul ul ul ul,#mkreplaced-toc.max4 ul ul ul ul{display:none}#mkreplaced-toc.max-5 ul ul ul ul ul,#mkreplaced-toc.max5 ul ul ul ul ul{display:none}.mk-rtl{direction:rtl;text-align:right}body.mkkatex-number-equations{counter-reset:eqnum}body.mkkatex-number-equations .katex-display{position:relative}body.mkkatex-number-equations .katex-display::after{counter-increment:eqnum;content:"(" counter(eqnum) ")";position:absolute;left:0;top:25%}body.mkkatex-number-equations.mkkatex-number-equations-right .katex-display::after{right:0;left:auto}.mkprinting,.mkprinting #wrapper{height:auto;margin-bottom:0;padding-bottom:0}.hideProgress #generated-toc,.hideProgress #firstdiff,.hideProgress #toc-title,.hideProgress #mkdocumentprogress,.hideProgress #mkincludechart,.hideProgress #mkprogressbar1,.hideProgress #mkprogressbar2,.hideProgress b.bookmark,.hideProgress .mkscrollmeter,.hideProgress #alllinks,.hideProgress #criticnav,.hideProgress .popup,.hideProgress #progressindicator,.hideProgress #mkautoscroll,.mkprinting #generated-toc,.mkprinting #firstdiff,.mkprinting #toc-title,.mkprinting #mkdocumentprogress,.mkprinting #mkincludechart,.mkprinting #mkprogressbar1,.mkprinting #mkprogressbar2,.mkprinting b.bookmark,.mkprinting .mkscrollmeter,.mkprinting #alllinks,.mkprinting #criticnav,.mkprinting .popup,.mkprinting #progressindicator,.mkprinting #mkautoscroll{display:none !important}.hideProgress .mkstyledtag,.mkprinting .mkstyledtag{display:none}.mkcolor-grammar-error,.mkcolor-spell-error{background:none;border-bottom:none}.mkprinting.mkshowcomments .mkstyledtag{display:inline;background:#ccc;padding:3px 9px;border-radius:20px;font-size:1}@media print{body{background:white;line-height:1.4}html,body,#wrapper{-moz-box-shadow:none;-webkit-box-shadow:none;box-shadow:none;-webkit-perspective:none !important;-webkit-text-size-adjust:none;border:0;box-sizing:border-box;float:none;margin:0;max-width:100%;padding:0;margin-top:0;width:auto}.critic #wrapper mark.crit{background-color:#fffd38 !important;text-decoration:none;color:#000}h1,h2,h3,h4,h5,h6{page-break-after:avoid}p,h2,h3{orphans:3;widows:3}section{page-break-before:avoid}pre>code{white-space:pre;word-break:break-word}#generated-toc,#firstdiff,#toc-title,#mkdocumentprogress,#mkincludechart,#mkprogressbar1,#mkprogressbar2,.mkscrollmeter,#alllinks,.popup{display:none !important}.suppressprintlinks a{border-bottom:none !important;color:inherit !important;cursor:default !important;text-decoration:none !important}.hrefafterlinktext #wrapper a:link:after,.hrefafterlinktext #wrapper a:visited:after{content:" (" attr(href) ") ";font-size:90%;opacity:.9}.nocodebreak pre{page-break-inside:avoid}img,table,figure{page-break-inside:avoid}.breakfootnotes .footnotes{page-break-before:always}.breakfootnotes .footnotes hr{display:none}#mktoctitle{display:block}#print-title{border-bottom:solid 1px #666;display:block}#wrapper pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}#wrapper #generated-toc-clone,#wrapper #mkreplaced-toc{display:block}.task-list .task-list-item{list-style-type:none !important}.task-list .gh-complete.task-list-item .task-list-item-checkbox:before{background:#838387;content:'\2713'}.task-list .task-list-item-checkbox{-webkit-appearance:none;position:relative}.task-list .task-list-item-checkbox:before{border:solid 1px #aaa;border-radius:2px;color:white;content:' ';display:block;font-weight:bold;height:1em;left:-20px;line-height:1;position:absolute;text-align:center;top:-.75em;width:1em}}
+#mkreplaced-toc{list-style-position:inside;padding:0;margin:0 0 0 1rem;list-style-type:none}#mkreplaced-toc li::before{content:''}#mkreplaced-toc li{font-size:1rem;line-height:1.25;font-weight:normal}#mkreplaced-toc li ul{font-size:1.3rem;font-weight:300;padding:.5rem 0;margin:0 0 0 1rem}#mkreplaced-toc li.missing{list-style-type:none !important}#mkreplaced-toc.max-1 ul,#mkreplaced-toc.max1 ul{display:none}#mkreplaced-toc.max-2 ul ul,#mkreplaced-toc.max2 ul ul{display:none}#mkreplaced-toc.max-3 ul ul ul,#mkreplaced-toc.max3 ul ul ul{display:none}#mkreplaced-toc.max-4 ul ul ul ul,#mkreplaced-toc.max4 ul ul ul ul{display:none}#mkreplaced-toc.max-5 ul ul ul ul ul,#mkreplaced-toc.max5 ul ul ul ul ul{display:none}.mk-rtl{direction:rtl;text-align:right}body.mkkatex-number-equations{counter-reset:eqnum}body.mkkatex-number-equations .katex-display{position:relative}body.mkkatex-number-equations .katex-display::after{counter-increment:eqnum;content:"(" counter(eqnum) ")";position:absolute;left:0;top:25%}body.mkkatex-number-equations.mkkatex-number-equations-right .katex-display::after{right:0;left:auto}.mkprinting,.mkprinting #wrapper{height:auto;margin-bottom:0;padding-bottom:0}.hideProgress #generated-toc,.hideProgress #firstdiff,.hideProgress #toc-title,.hideProgress #mkdocumentprogress,.hideProgress #mkincludechart,.hideProgress #mkprogressbar1,.hideProgress #mkprogressbar2,.hideProgress b.bookmark,.hideProgress .mkscrollmeter,.hideProgress #alllinks,.hideProgress #criticnav,.hideProgress .popup,.hideProgress #progressindicator,.hideProgress #mkautoscroll,.mkprinting #generated-toc,.mkprinting #firstdiff,.mkprinting #toc-title,.mkprinting #mkdocumentprogress,.mkprinting #mkincludechart,.mkprinting #mkprogressbar1,.mkprinting #mkprogressbar2,.mkprinting b.bookmark,.mkprinting .mkscrollmeter,.mkprinting #alllinks,.mkprinting #criticnav,.mkprinting .popup,.mkprinting #progressindicator,.mkprinting #mkautoscroll{display:none !important}.hideProgress .mkstyledtag,.mkprinting .mkstyledtag{display:none}.mkcolor-grammar-error,.mkcolor-spell-error{background:none;border-bottom:none}.mkprinting.mkshowcomments .mkstyledtag{display:inline;background:#ccc;padding:3px 9px;border-radius:20px;font-size:1}@media print{body{background:white;line-height:1.4}html,body,#wrapper{-moz-box-shadow:none;-webkit-box-shadow:none;box-shadow:none;-webkit-perspective:none !important;-webkit-text-size-adjust:none;border:0;box-sizing:border-box;float:none;margin:0;max-width:100%;padding:0;margin-top:0;width:auto}.critic #wrapper mark.crit{background-color:#fffd38 !important;text-decoration:none;color:#000}h1,h2,h3,h4,h5,h6{page-break-after:avoid}p,h2,h3{orphans:3;widows:3}section{page-break-before:avoid}pre>code{white-space:pre;word-break:break-word}#generated-toc,#firstdiff,#toc-title,#mkdocumentprogress,#mkincludechart,#mkprogressbar1,#mkprogressbar2,.mkscrollmeter,#alllinks,.popup{display:none !important}.suppressprintlinks a{border-bottom:none !important;color:inherit !important;cursor:default !important;text-decoration:none !important}.hrefafterlinktext #wrapper a:link:after,.hrefafterlinktext #wrapper a:visited:after{content:" (" attr(href) ") ";font-size:90%;opacity:.9}.nocodebreak pre{page-break-inside:avoid}img,table,figure{page-break-inside:avoid}.breakfootnotes .footnotes{page-break-before:always}.breakfootnotes .footnotes hr{display:none}#mktoctitle{display:block}#print-title{border-bottom:solid 1px #666;display:block}#wrapper pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}#wrapper #generated-toc-clone,#wrapper #mkreplaced-toc{display:block}.task-list{padding-left:3.3rem}.mkstyle--ink .task-list,.mkstyle--swiss .task-list{padding-left:3.3rem !important}.mkstyle--upstandingcitizen .task-list,.mkstyle--github .task-list{padding-left:3.6rem !important}.mkstyle--manuscript .task-list{padding-left:2.4rem !important}.mkstyle--amblin .task-list{padding-left:2.1rem !important}.mkstyle--grump .task-list{padding-left:1rem !important}.mkstyle--grump .task-list .task-list-item-checkbox{left:0 !important}.task-list .task-list-item{list-style-type:none !important;left:auto}.task-list .task-list-item .task-list-item-checkbox{-webkit-appearance:none;position:relative;left:auto}.task-list .task-list-item .task-list-item-checkbox:before{border:solid 1px #aaa;border-radius:2px;color:white;content:' ';display:block;font-weight:bold;height:1em;left:-1rem;line-height:1;position:absolute;text-align:center;top:-.75em;width:1em}.task-list .gh-complete.task-list-item .task-list-item-checkbox:before{background:#838387;content:'\2713'}}
 #wrapper #generated-toc-clone,#wrapper #mkreplaced-toc,#wrapper #generated-toc-clone ul,#wrapper #mkreplaced-toc ul{list-style-position:inside}#wrapper #generated-toc-clone li.missing,#wrapper #mkreplaced-toc li.missing{list-style-type: none!important}#wrapper #generated-toc-clone ul,#wrapper #mkreplaced-toc ul{list-style-type: upper-roman}#wrapper #generated-toc-clone>ul>li>ul,#wrapper #mkreplaced-toc>li>ul {list-style-type: decimal}#wrapper #generated-toc-clone>ul>li>ul>li>ul,#wrapper #mkreplaced-toc>li>ul>li>ul{list-style-type: decimal-leading-zero}#wrapper #generated-toc-clone>ul>li>ul>li>ul>li>ul,#wrapper #mkreplaced-toc>li>ul>li>ul>li>ul{list-style-type: lower-greek}#wrapper #generated-toc-clone>ul>li>ul>li>ul>li>ul>li>ul,#wrapper #mkreplaced-toc>li>ul>li>ul>li>ul>li>ul{list-style-type: disc}#wrapper #generated-toc-clone>ul>li>ul>li>ul>li>ul>li>ul>li>ul,#wrapper #mkreplaced-toc>li>ul>li>ul>li>ul>li>ul>li>ul{list-style-type: square}#wrapper #generated-toc-clone,#wrapper #mkreplaced-toc{}
 </style>
 
@@ -651,27 +651,45 @@ html,body,#wrapper{font-size:10pt!important}
   </head>
 <body class="normal firstload">
   <div id="wrapper">
+
+
+<div align="center">
+    <img src="icon.png" width="128" height="128">
+</div>
+
+
 <h1>Sublime Text Projects Alfred Workflow</h1>
 
 <p>View, filter and open your Sublime Text (or VSCode) project files.</p>
 
-<figure>
-<img src="https://raw.githubusercontent.com/deanishe/alfred-sublime-text/master/demo.gif" alt="" id="demo" />
-</figure>
+<p><img src="https://raw.githubusercontent.com/deanishe/alfred-sublime-text/master/demo.gif" alt="" /></p>
+
 <!-- MarkdownTOC autolink="true" autoanchor="true" -->
+
 
 <ul>
 <li><a href="#download--installation">Download &amp; Installation</a>
 
 <ul>
 <li><a href="#catalina-and-later">Catalina and later</a></li>
-</ul></li>
-<li><a href="#usage">Usage</a></li>
+</ul>
+</li>
+<li><a href="#usage">Usage</a>
+
+<ul>
+<li><a href="#universal-actions">Universal Actions</a></li>
+<li><a href="#hotkeys">Hotkeys</a></li>
+<li><a href="#external-triggers">External Triggers</a></li>
+</ul>
+</li>
 <li><a href="#how-it-works">How it works</a></li>
 <li><a href="#configuration">Configuration</a></li>
 <li><a href="#licensing-thanks">Licensing, thanks</a></li>
 </ul>
+
+
 <!-- /MarkdownTOC -->
+
 
 <p><a id="download--installation"></a></p>
 
@@ -683,11 +701,13 @@ html,body,#wrapper{font-size:10pt!important}
 
 <h3>Catalina and later</h3>
 
-<p>If you&#8217;re running Catalina or later (macOS 10.15+), you&#8217;ll need to <a href="https://github.com/deanishe/awgo/wiki/Catalina">grant the workflow executable permission to run</a>.</p>
+<p>If you&rsquo;re running Catalina or later (macOS 10.15+), you&rsquo;ll need to <a href="https://github.com/deanishe/awgo/wiki/Catalina">grant the workflow executable permission to run</a>.</p>
 
 <p><a id="usage"></a></p>
 
 <h2>Usage</h2>
+
+<p>There is one keyword, <code>.st</code>, which works as follows:</p>
 
 <ul>
 <li><code>.st [&lt;query&gt;]</code> — List/filter your <code>.sublime-project</code> files
@@ -695,21 +715,74 @@ html,body,#wrapper{font-size:10pt!important}
 <ul>
 <li><code>↩</code> — Open result in Sublime Text</li>
 <li><code>⌘+↩</code> — Reveal file in Finder</li>
-</ul></li>
+</ul>
+</li>
 <li><code>.st rescan</code> — Reload cached list of projects</li>
 <li><code>.st config</code> — Show the current settings
 
 <ul>
 <li><code>Workflow Is Up To Date</code> / <code>Workflow Update Available</code> — Install update or check for update</li>
-<li><code>Edit Config File</code> — Open workflow&#8217;s config file in Sublime Text</li>
+<li><code>Rescan Projects</code> — Reload list of projects</li>
+<li><code>Edit Config File</code> — Open workflow&rsquo;s config file in Sublime Text</li>
 <li><code>View Help File</code> — Open README in your browser</li>
 <li><code>Report Issue</code> — Open GitHub issue tracker in your browser</li>
-<li><code>Visit Forum Thread</code> — Open workflow&#8217;s thread on <a href="https://www.alfredforum.com">alfredforum.com</a></li>
-<li><code>Rescan Projects</code> — Reload list of projects</li>
-</ul></li>
+<li><code>Visit Forum Thread</code> — Open workflow&rsquo;s thread on <a href="https://www.alfredforum.com">alfredforum.com</a></li>
+</ul>
+</li>
 </ul>
 
-<p>You can enter the words <code>search</code> or <code>config</code> as a search query anywhere to jump to that screen.</p>
+
+<p>You can enter <code>search</code> or <code>config</code> as a search query anywhere to jump to the corresponding screen.</p>
+
+<p><a id="universal-actions"></a></p>
+
+<h3>Universal Actions</h3>
+
+<p>There are Universal Actions for files, URLs and text. Files are opened, and text is inserted into a new document.</p>
+
+<p>Multiple URLs are treated as text, but a single URL is retrieved with curl and a new document is created with its contents.</p>
+
+<p><a id="hotkeys"></a></p>
+
+<h3>Hotkeys</h3>
+
+<p>The workflow has two Hotkeys (marked red) that you can set to open the currently-selected files in any application in Sublime Text. One Hotkey is for Finder and Path Finder only, and the other is for all other applications. You should set them to the same keyboard shortcut.</p>
+
+<p>The Finder/Path Finder variant doesn&rsquo;t rely on Alfred&rsquo;s &ldquo;Selection in macOS&rdquo; feature, and will open the frontmost window&rsquo;s target (the folder whose contents it&rsquo;s showing) if nothing is selected.</p>
+
+<p><a id="external-triggers"></a></p>
+
+<h3>External Triggers</h3>
+
+<p>The workflow has the following External Triggers that can be used from scripts or other workflows:</p>
+
+<table>
+<thead>
+<tr>
+<th>    Name    </th>
+<th>                      Description                       </th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td> <code>new</code>      </td>
+<td> Create a new document containing the given text        </td>
+</tr>
+<tr>
+<td> <code>open</code>     </td>
+<td> Open the specified path in Sublime Text                </td>
+</tr>
+<tr>
+<td> <code>open-url</code> </td>
+<td> Create a new document with the data retrieved from URL </td>
+</tr>
+<tr>
+<td> <code>search</code>   </td>
+<td> Show project search results for given query            </td>
+</tr>
+</tbody>
+</table>
+
 
 <p><a id="how-it-works"></a></p>
 
@@ -717,50 +790,47 @@ html,body,#wrapper{font-size:10pt!important}
 
 <p>The workflow scans your system for <code>.sublime-project</code> (or <code>.code-workspace</code>) files using <code>locate</code>, <code>mdfind</code> and (optionally) <code>find</code>. It then caches the list of projects for 10 minutes (by default).</p>
 
-<p>As the <code>locate</code> database isn&#8217;t enabled on most machines (and isn&#8217;t updated frequently in any case), and <code>mdfind</code> ignores hidden directories, there is an additional, optional <code>find</code>-based scanner to &#8220;fill the gaps&#8221;, which you must specifically configure (see below).</p>
+<p>As the <code>locate</code> database isn&rsquo;t enabled on most machines (and isn&rsquo;t updated frequently in any case), and <code>mdfind</code> ignores hidden directories, there is an additional, optional <code>find</code>-based scanner to &ldquo;fill the gaps&rdquo;, which you must specifically configure (see below).</p>
+
+<p><strong>NOTE</strong>: When the workflow is asked to open a directory (e.g. via External Trigger or Universal Action), it looks for a project file in the directory, and opens that instead if one is found.</p>
 
 <p><a id="configuration"></a></p>
 
 <h2>Configuration</h2>
 
-<p>Scan intervals are configured in the <a href="https://www.alfredapp.com/help/workflows/advanced/variables/#environment">workflow&#8217;s configuration sheet in Alfred Preferences</a>:</p>
+<p>Scan intervals are configured in the <a href="https://www.alfredapp.com/help/workflows/advanced/variables/#environment">workflow&rsquo;s configuration sheet in Alfred Preferences</a>:</p>
 
 <table>
-<colgroup>
-<col style="text-align:left;"/>
-<col style="text-align:left;"/>
-</colgroup>
-
 <thead>
 <tr>
-	<th style="text-align:left;">Variable</th>
-	<th style="text-align:left;">Usage</th>
+<th>      Variable     </th>
+<th>                           Usage                           </th>
 </tr>
 </thead>
-
 <tbody>
 <tr>
-	<td style="text-align:left;"><code>INTERVAL_FIND</code></td>
-	<td style="text-align:left;">How long to cache <code>find</code> search results for</td>
+<td> <code>INTERVAL_FIND</code>   </td>
+<td> How long to cache <code>find</code> search results for               </td>
 </tr>
 <tr>
-	<td style="text-align:left;"><code>INTERVAL_LOCATE</code></td>
-	<td style="text-align:left;">How long to cache <code>locate</code> search results for</td>
+<td> <code>INTERVAL_LOCATE</code> </td>
+<td> How long to cache <code>locate</code> search results for             </td>
 </tr>
 <tr>
-	<td style="text-align:left;"><code>INTERVAL_MDFIND</code></td>
-	<td style="text-align:left;">How long to cache <code>mdfind</code> search results for</td>
+<td> <code>INTERVAL_MDFIND</code> </td>
+<td> How long to cache <code>mdfind</code> search results for             </td>
 </tr>
 <tr>
-	<td style="text-align:left;"><code>VSCODE</code></td>
-	<td style="text-align:left;">Set to <code>1</code> or <code>true</code> to switch to Visual Studio Code mode</td>
+<td> <code>VSCODE</code>          </td>
+<td> Set to <code>1</code> or <code>true</code> to switch to Visual Studio Code mode </td>
 </tr>
 </tbody>
 </table>
 
+
 <p>The interval values should be of the form <code>10m</code> or <code>2h</code>. Set to <code>0</code> to disable a particular scanner.</p>
 
-<p>The workflow should work &#8220;out of the box&#8221;, but if you have project files in directories that <code>mdfind</code> doesn&#8217;t see (hidden directories, network shares), you may have to explicitly add some search paths to the <code>sublime.toml</code> configuration file in the workflow&#8217;s data directory. The file is created on first run, and you can use <code>.stconfig &gt; Edit Config File</code> to open it.</p>
+<p>The workflow should work &ldquo;out of the box&rdquo;, but if you have project files in directories that <code>mdfind</code> doesn&rsquo;t see (hidden directories, network shares), you may have to explicitly add some search paths to the <code>sublime.toml</code> configuration file in the workflow&rsquo;s data directory. The file is created on first run, and you can use <code>.st config &gt; Workflow Settings &gt; Edit Config File</code> to open it.</p>
 
 <p>These directories are searched with <code>find</code>.</p>
 
